<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_ask_help"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.brainiac.mocae.needhelp.AskHelpActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:text="@string/help_request_name"
                style="@android:style/TextAppearance.DeviceDefault.Large"
                android:layout_width="match_parent"
                android:textColor="#123456"
                android:layout_height="wrap_content" />

            <EditText
                style="@android:style/TextAppearance.DeviceDefault.Large"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="text"
                android:id="@+id/nameEditText" />

            <TextView
                android:text="@string/help_request_description"
                android:textColor="#123456"
                style="@android:style/TextAppearance.DeviceDefault.Large"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <EditText
                style="@android:style/TextAppearance.DeviceDefault.Large"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textMultiLine"
                android:gravity="top|left"
                android:lines="4"
                android:maxLines="8"
                android:id="@+id/descriptionEditText" />

            <TextView
                android:text="@string/help_request_people"
                android:textColor="#123456"
                style="@android:style/TextAppearance.DeviceDefault.Large"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <EditText
                style="@android:style/TextAppearance.DeviceDefault.Large"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="numberDecimal"
                android:id="@+id/minRequiredPeopleEditText" />

            <TextView
                android:text="@string/help_request_start_date"
                android:textColor="#123456"
                style="@android:style/TextAppearance.DeviceDefault.Large"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <EditText
                style="@android:style/TextAppearance.DeviceDefault.Large"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="date"
                android:focusable="false"
                android:id="@+id/dateEditText"
                android:focusableInTouchMode="false"/>

            <TextView
                android:text="@string/help_request_end_date"
                android:textColor="#123456"
                style="@android:style/TextAppearance.DeviceDefault.Large"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <EditText
                style="@android:style/TextAppearance.DeviceDefault.Large"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="date"
                android:focusable="false"
                android:id="@+id/endDateEditText"
                android:focusableInTouchMode="false"/>

            <TextView
                android:text="@string/help_request_tag"
                android:textColor="#123456"
                style="@android:style/TextAppearance.DeviceDefault.Large"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <EditText
                style="@android:style/TextAppearance.DeviceDefault.Large"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="text"
                android:id="@+id/tagEditText" />

            <TextView
                android:text="@string/help_request_location"
                android:textColor="#123456"
                style="@android:style/TextAppearance.DeviceDefault.Large"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <TextView
                style="@android:style/TextAppearance.DeviceDefault.Large"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="text"
                android:textColor="#9D9FA2"
                android:textStyle="italic"
                android:text="@string/help_request_location_click"
                android:onClick="onLocationClick"
                android:id="@+id/locationEditText" />

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/help_request_save"
                android:textColor="#123456"
                android:id="@+id/btnHelpRequestSave"
                android:onClick="onBtnSaveHelpRequest"/>

        </LinearLayout>
    </ScrollView>
</RelativeLayout>
