<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_event_details"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.brainiac.mocae.needhelp.EventDetailsActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                android:text="@string/help_request_name"
                android:layout_width="match_parent"
                android:textColor="#123456"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                style="@android:style/TextAppearance.DeviceDefault.Large"/>

            <TextView
                android:text=" "
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:id="@+id/nameTxtName"
                style="@android:style/TextAppearance.DeviceDefault.Large"/>

            <TextView
                android:text="@string/help_request_description"
                android:textColor="#123456"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                style="@android:style/TextAppearance.DeviceDefault.Large" />

            <TextView
                android:text=" "
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:id="@+id/descriptionTxtView"
                style="@android:style/TextAppearance.DeviceDefault.Large" />

            <TextView
                android:text="@string/help_request_people"
                android:layout_width="match_parent"
                android:textColor="#123456"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                style="@android:style/TextAppearance.DeviceDefault.Large" />

            <TextView
                android:text=" "
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:id="@+id/minRequiredPeopleTxtView"
                style="@android:style/TextAppearance.DeviceDefault.Large" />

            <TextView
                android:text="@string/help_request_start_date"
                android:layout_width="match_parent"
                android:textColor="#123456"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                style="@android:style/TextAppearance.DeviceDefault.Large" />

            <TextView
                android:text=" "
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:id="@+id/startDateTxtView"
                style="@android:style/TextAppearance.DeviceDefault.Large" />

            <TextView
                android:text="@string/help_request_end_date"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="#123456"
                android:layout_marginTop="20dp"
                style="@android:style/TextAppearance.DeviceDefault.Large" />

            <TextView
                android:text=" "
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:id="@+id/endDateTxtView"
                style="@android:style/TextAppearance.DeviceDefault.Large" />

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/join_button"
                android:textColor="#123456"
                android:layout_marginTop="20dp"
                android:id="@+id/joinEventBtn"
                android:onClick=""/>


        </LinearLayout>
    </ScrollView>
</RelativeLayout>
