<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:background="@drawable/bgbg"
    tools:context="com.brainiac.mocae.needhelp.MainActivity">

    <com.facebook.login.widget.ProfilePictureView
        android:id="@+id/profilePictureView"
        android:background="#A6CCFFCC"
        android:layout_width="130dp"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
    />

    <com.facebook.login.widget.LoginButton
        android:id="@+id/login_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_alignParentTop="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="30dp"
        android:layout_marginBottom="30dp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_centerVertical="true"
        android:gravity="center"
        android:id="@+id/btnLayout"
        android:weightSum="1">


            <Button
                android:layout_width="200dp"
                android:layout_height="90dp"
                android:background="@drawable/offerhelpbtn"
                android:layout_gravity="center"
                android:id="@+id/offerHelpButton"
                android:onClick="onOfferHelpClick"/>

            <TextView
                android:layout_width="10dp"
                android:layout_height="10dp"
                android:text=" "/>

            <Button
                android:layout_width="200dp"
                android:layout_height="90dp"
                android:layout_gravity="center"
                android:background="@drawable/askhelpbtn"
                android:id="@+id/askForHelpButton"
                android:onClick="onAskHelpClick"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#A6CCFFCC">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="130dp"
                android:textColor="#FF6E6E6E"
                android:layout_margin="10dp"
                android:text="@string/alert_text"
                android:textSize="23sp"
                android:id="@+id/alertLogInText" />

        </LinearLayout>
    </LinearLayout>

    <Button
        android:text="@string/upcoming_events"
        android:layout_width="match_parent"
        android:layout_height="50sp"
        android:textColor="#FF6E6E6E"
        android:layout_centerHorizontal="true"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="90dp"
        android:textSize="30sp"
        android:background="#A6CCFFCC"
        android:id="@+id/myUpcommingButton"
        android:onClick="onUpcomingEventsClick"
        style="@android:style/Widget.Button" />

    <Button
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:textColor="#FF6E6E6E"
        android:layout_centerHorizontal="true"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="30dp"
        android:background="#A6CCFFCC"
        android:text="@string/created_events"
        android:id="@+id/myCreatedButton"
        style="@android:style/Widget.Button"
        android:onClick="onCreatedEventsClick"
        android:textSize="30sp"/>

</RelativeLayout>
